welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:3: error: not found: value weekday
	if(!weekday | vacation){
            ^