welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
var test = false;
	if(!weekday | vacation){
		test = true;
	}else{
		test = false;	
	}
	return test;


}
